--- a/res/layout/fragment_three.xml
+++ b/res/layout/fragment_three.xml
@@ -12,5 +12,12 @@
         android:text="@string/content_three"
         android:textColor="@color/black"
         android:textAppearance="?android:attr/textAppearanceLarge" />
+    
+    <com.facebook.widget.LoginButton
+        android:id="@+id/login_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="@string/logout_text" />
 
 </LinearLayout>
