--- a/res/menu/action_bar_menu.xml
+++ b/res/menu/action_bar_menu.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-    	<item android:id="@+id/save_button"
-          android:title="i"
+    	<item android:id="@+id/invite_button"
+          android:title="@string/menu_invite_friends"
           android:icon="@drawable/social_add_group"
           android:showAsAction="always" />
 </menu>
