--- a/res/layout/fragment_two.xml
+++ b/res/layout/fragment_two.xml
@@ -4,13 +4,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textView2"
+    <Button
+        android:id="@+id/notify"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="@string/content_two"
-        android:textColor="@color/black"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:text="Notify" />
 
 </LinearLayout>
