--- a/res/layout/requests_list_item.xml
+++ b/res/layout/requests_list_item.xml
@@ -4,7 +4,7 @@
               android:layout_height="wrap_content"
               android:layout_gravity="center_horizontal"
               android:orientation="horizontal"
-              android:layout_alignParentLeft="true">
+              android:layout_alignParentLeft="true" >
 
     <com.facebook.widget.ProfilePictureView
             android:id="@+id/icon"
@@ -14,7 +14,7 @@
     <LinearLayout
             android:orientation="vertical"
             android:layout_gravity="center_vertical"
-            android:layout_width="fill_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp" >
         <TextView
@@ -24,12 +24,23 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="20sp" />
+        	        
         <TextView
                 android:id="@+id/text2"
                 android:text="@string/test"
-                android:textColor="#6699CC"
+                android:textColor="#33B5E5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="16sp" />
+                android:textSize="18sp" />
+       
     </LinearLayout>
+
+    <org.holoeverywhere.widget.Spinner
+        android:id="@+id/friend_requests_spin"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|clip_vertical|clip_horizontal"
+        android:layout_weight="1"
+        android:gravity="center_vertical|clip_vertical|clip_horizontal" />
+
 </LinearLayout>
