--- a/res/layout/fragment_one.xml
+++ b/res/layout/fragment_one.xml
@@ -8,6 +8,7 @@
     	    android:id="@+id/android:list"
     	    android:layout_width="fill_parent"
     	    android:layout_height="fill_parent"
-    	    android:background="@drawable/button_border" />
+    	    android:background="@drawable/button_border"
+    	   	android:paddingTop="1dp" />
     
 </LinearLayout>
