--- a/res/layout/friends_list_item.xml
+++ b/res/layout/friends_list_item.xml
@@ -27,7 +27,7 @@
         <TextView
                 android:id="@+id/text2"
                 android:text="@string/test"
-                android:textColor="#0099CC"
+                android:textColor="#33B5E5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="16sp" />
