--- a/res/layout/requests_list_item.xml
+++ b/res/layout/requests_list_item.xml
@@ -14,7 +14,7 @@
     <LinearLayout
             android:orientation="vertical"
             android:layout_gravity="center_vertical"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp" >
         <TextView
@@ -23,24 +23,26 @@
                 android:textColor="#000"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="20sp" />
-        	        
-        <TextView
-                android:id="@+id/text2"
-                android:text="@string/test"
-                android:textColor="#33B5E5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:textSize="18sp" />
+        
+        <LinearLayout
+            	android:orientation="horizontal"
+            	android:layout_gravity="bottom"
+            	android:layout_width="fill_parent"
+            	android:layout_height="wrap_content" >
+            <Button 
+	            android:id="@+id/confirm_friend_request"
+	            android:text="@string/confirm_friend_request"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content" />
+            
+            <Button 
+	            android:id="@+id/decline_friend_request"
+	            android:text="@string/decline_friend_request"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content" />
+        </LinearLayout>
        
     </LinearLayout>
-
-    <org.holoeverywhere.widget.Spinner
-        android:id="@+id/friend_requests_spin"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|clip_vertical|clip_horizontal"
-        android:layout_weight="1"
-        android:gravity="center_vertical|clip_vertical|clip_horizontal" />
 
 </LinearLayout>
