--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -3,5 +3,7 @@
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
     <color name="main_red">#CC0000</color>
+    <color name="blue">#0099CC</color>
+    <color name="grey">#CCCCCC</color>
     
 </resources>
