[42516417] Como Usuario, Quiero recibir push notifications. Para saber cuando alguien me envie una invitación de amistad.

--- a/res/menu/action_bar_menu.xml
+++ b/res/menu/action_bar_menu.xml
@@ -2,6 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     	<item android:id="@+id/invite_button"
           android:title="@string/menu_invite_friends"
-          android:icon="@drawable/6_social_add_person"
+          android:icon="@drawable/social_add_person"
+          android:showAsAction="always" />
+    	<item android:id="@+id/notifications_button"
+          android:title="@string/menu_notifications"
+          android:icon="@drawable/action_about"
           android:showAsAction="always" />
 </menu>
