--- a/res/layout/fragment_two.xml
+++ b/res/layout/fragment_two.xml
@@ -1,24 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-    	
-    	<ListView
-    	    android:id="@+id/android:list"
-    	    android:layout_width="fill_parent"
-    	    android:layout_height="fill_parent"
-    	    android:background="@drawable/button_border"
-    	    android:paddingTop="1dp"/>
-    	
-    	<TextView
-    	    android:id="@android:id/empty"
-    	    android:layout_width="fill_parent"
-    	    android:layout_height="fill_parent"
-    	    android:layout_gravity="center"
-    	    android:background="@drawable/button_border"
-    	    android:gravity="center"
-    	    android:text="@string/no_friend_requests"
-    	    android:textSize="20sp" />
+    android:orientation="vertical" >
     
+    <TextView 
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="It is good to be here"/>
+    
+
 </LinearLayout>
