--- a/res/layout/calls_list_fragment.xml
+++ b/res/layout/calls_list_fragment.xml
@@ -10,5 +10,15 @@
     	    android:layout_height="fill_parent"
     	    android:background="@drawable/button_border"
     	   	android:paddingTop="1dp" />
+    	
+    	<TextView
+    	    android:id="@android:id/empty"
+    	    android:layout_width="fill_parent"
+    	    android:layout_height="fill_parent"
+    	    android:layout_gravity="center"
+    	    android:background="@color/white"
+    	    android:gravity="center"
+    	    android:text="@string/no_calls_log"
+    	    android:textSize="20sp" />
     
 </LinearLayout>
