--- a/res/layout/requests_list_activity.xml
+++ b/res/layout/requests_list_activity.xml
@@ -26,6 +26,14 @@
 		    android:paddingBottom="2dp"
 		    android:paddingTop="2dp" />
     	
+    	<ProgressBar 
+    	    android:id="@+id/loadingProgress"
+    	    style="?android:attr/progressBarStyleLarge"
+    	    android:layout_width="wrap_content"
+    	    android:layout_height="fill_parent"
+    	    android:layout_gravity="center"
+    	    android:visibility="gone" />
+    	
     	<ListView
     	    android:id="@+id/android:list"
     	    android:layout_width="fill_parent"
