--- a/res/layout/calls_list_fragment.xml
+++ b/res/layout/calls_list_fragment.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/light_grey" >
      
     	<ListView
     	    android:id="@+id/android:list"
@@ -16,7 +17,6 @@
     	    android:layout_width="fill_parent"
     	    android:layout_height="fill_parent"
     	    android:layout_gravity="center"
-    	    android:background="@color/white"
     	    android:gravity="center"
     	    android:text="@string/no_calls_log"
     	    android:textSize="20sp" />
