--- a/res/layout/walkietalkie.xml
+++ b/res/layout/walkietalkie.xml
@@ -3,7 +3,8 @@
     android:layout_width="fill_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center_horizontal"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:background="@color/light_grey" >
 
     <LinearLayout
         android:layout_width="fill_parent"
