--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -6,5 +6,7 @@
     <color name="light_red">#FF4444</color>
     <color name="blue">#0099CC</color>
     <color name="grey">#CCCCCC</color>
+    <color name="dark_grey">#504D4A</color>
+    <color name="light_grey">#EBE9E7</color>
     
 </resources>
