--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -2,11 +2,14 @@
 <resources>
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
-    <color name="main_red">#CC0000</color>
+    <color name="red">#CC0000</color>
+    <color name="pale_red">#FF2F2F</color>
     <color name="light_red">#FF4444</color>
     <color name="blue">#0099CC</color>
     <color name="grey">#CCCCCC</color>
     <color name="dark_grey">#504D4A</color>
     <color name="light_grey">#EBE9E7</color>
-    
+    <color name="green">#27ae60</color>
+    <color name="pale_green">#668883</color>
+    <color name="light_green">#7cd6a2</color>
 </resources>
