--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -19,8 +19,8 @@
     </style>
     
 	<style name="MyActionBar" parent="@android:Widget.Holo.Light.ActionBar.Solid.Inverse">
-	    <item name="background">@color/main_red</item>
-	    <item name="android:background">@color/main_red</item>
+	    <item name="background">@color/red</item>
+	    <item name="android:background">@color/red</item>
 	    
 	    <item name="backgroundStacked">@color/black</item>
 		<item name="android:backgroundStacked">@color/black</item>
@@ -29,5 +29,11 @@
 	    <item name="android:backgroundSplit">@color/white</item>
 	</style>
     
+	<!-- Adds shadow to text -->
+    <style name="ShadowText">
+        <item name="android:shadowColor">#000000</item>
+        <item name="android:shadowDy">1</item>
+        <item name="android:shadowRadius">1</item>
+    </style>
 
 </resources>
