--- a/res/values/themes.xml
+++ b/res/values/themes.xml
@@ -19,7 +19,7 @@
     </style>
     
 	<style name="ActionBar" parent="@android:Widget.Holo.Light.ActionBar.Solid.Inverse">
-	    <item name="android:background">@color/main_red</item>
+	    <item name="android:background">@color/red</item>
 	    <item name="android:backgroundStacked">@color/black</item>
 	    <item name="android:backgroundSplit">@color/white</item>
 	</style>
